--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.svalero.multidescarga/com.svalero.multidescarga.HelloApplication</mainClass>
+              <mainClass>com.svalero.multidescarga.App</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
